# Rhimoz

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/migrations/: 0001_saved_transcriptions.sql  0002_public_and_composer.sql
backend/seed/: PROVENANCE.md  audiogen.py  generate_audio.py  manifest.py  seed_public_transcriptions.py
backend/src/rhimoz_api/: auth.py  jobs.py  main.py  render.py  schemas.py
backend/src/rhimoz_api/routes/: downloads.py  public.py  saved.py  search.py  transcribe.py
backend/tests/: conftest.py  test_auth.py  test_downloads.py  test_public.py  test_saved.py  test_search.py  test_transcribe.py
engine/: README.md  pyproject.toml  requirements.txt
engine/src/rhimoz/: transcribe.py
engine/src/rhimoz/instruments/: __init__.py  harmonica.py  profile.py
engine/src/rhimoz/notes/: model.py
engine/src/rhimoz/pipeline/: detect.py  export_musicxml.py  export_pdf.py  preprocess.py  quantize.py  tab.py
engine/tests/: conftest.py
engine/tests/integration/: test_pipeline_end_to_end.py
engine/tests/unit/: test_export_musicxml.py  test_export_pdf.py  test_instruments.py  test_notes_model.py  test_pipeline_tab.py  test_preprocess.py  test_quantize.py  test_transcribe.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  public.ts  saved.ts  search.ts  transcribe.ts  types.ts
frontend/src/audio/: wavEncoder.test.ts  wavEncoder.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AudioPlayer.tsx  DownloadButtons.tsx  MicRecorder.tsx  NotationViewer.tsx  SaveTranscriptionForm.tsx  SavedDownloadButtons.tsx  UploadForm.tsx
frontend/src/hooks/: useCursorSync.ts
frontend/src/notation/: tabPositions.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  ReopenedTranscriptionPage.tsx  SearchPage.tsx  SignupPage.tsx  TranscribePage.tsx
frontend/src/sync/: cursorSync.test.ts  cursorSync.ts
research/phase0/: PHASE0_FINDINGS.md  README.md  requirements.txt
research/phase0/results/: phase0_raw_results.json
research/phase0/samples/: ATTRIBUTION.md
research/phase0/scripts/: validate_pitch_detection.py
